# pico-altair-8800

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  ansi_input.c  ansi_input.h  build_all_boards.sh  comms_mgr.c  comms_mgr.h  config.c  config.h  core1_io_mgr.c  core1_io_mgr.h  cpu_state.c  cpu_state.h  io_ports.c  lwipopts.h  main.c  simple_build_test.sh  static_html_hex.h  websocket_console.c  websocket_console.h  wifi.c  wifi.h  ws.cpp  ws.h
.codex/skills/bds-c/: SKILL.md
.github/skills/bds-c/: SKILL.md
.github/skills/bds-c/agents/: openai.yaml
.github/skills/bds-c/scripts/: check_bds_c.py
Altair8800/: intel8080.c  pico_88dcdd_remote_fs.c  pico_88dcdd_sd_card_ws.c  pico_disk.c  pico_disk.h  remote_fs.c  remote_fs.h  universal_88dcdd.c  universal_88dcdd.h
Apps/: BUILDALL.SUB  CLEAR.ASM  WEATHER.C
Apps/BREAKOUT/: BREAKOUT.C  BREAKOUT.SUB
Apps/BUILDALL/: BUILDALL.SUB
Apps/CHAT/: CHAT.C  CHAT.CFG  CHAT.SUB  CHAT.SYS  CHATJSON.C  CHATJSON.H  README.MD
Apps/EDIT/: EDIT.C  EDIT.SUB
Apps/ENV/: ENV.C  ENV.SUB
Apps/FT/: FT.C  README.MD
Apps/GAME/: GAME.C  GAME.SUB
Apps/GAMES/: 23-MATCH.BAS  AMAZING.BAS  AMAZINGP.BAS  ANIMAL.BAS  AWARI.BAS  BANNER.BAS  BATTLE.BAS  CHIEF.BAS  KINEMA.BAS  LEM.BAS  QUEEN.BAS  README.md  ROULETTE.BAS
Apps/ISAM/: DOCTOR.C  DXFILE.C  DXINDEX.C  DXISAM.C  DXISAM.H  ISAM.SUB  ISAMTST.C  README.MD
Apps/MANCALA/: MANCALA.C  MANCALA.SUB
Apps/MCPDONE/: MCPDONE.C  MCPDONE.SUB
Apps/ONBOARD/: ONBOARD.C  ONBOARD.SUB
Apps/PICO/: PICO.C  PICO.SUB
Apps/SDK/: DXENV.C  DXSYS.C  DXSYS.H  DXTERM.C  DXTERM.H  DXTIMER.C  DXTIMER.H  SDK.SUB  STRING.C  STRING.H  STRING.SUB  STRINGT.C  dxtimer.h
Apps/SNAKE/: SNAKE.C  SNAKE.SUB
Apps/TETRIS/: TETRIS.C  TETRIS.SUB
Apps/TICTAC/: TICTAC.C  TICTAC.SUB
Apps/VIBE/: VIBE.SUB
Apps/WEATHER/: WEATHER.SUB
Apps/archive1/gf/: gf.c  gf.sub
Apps/archive1/sdk/: dxterm.c  string.h
Apps/gf/: gf.c
Disks/: bdsc-v1.60.dsk  blank.dsk  blank_disk.h  cpm63k.dsk  cpm63k_disk.h  dsk_to_header.py
FrontPanels/: display_2_8.c  display_2_8.cpp  display_2_8.h  display_ili9488.c  display_ili9488.h  display_st7789.c  font_5x8.h  font_6x10.h  ili9488_async.c  spi1_bus.c  spi1_bus.h  st7789_async.c  st7789vw_async.c  virtual_monitor.c  vt100_display.c
PortDrivers/: files_io.c  files_io.h  host_files_io.c  host_files_io.h  http_get.c  stats_io.c  stats_io.h  time_io.c  time_io.h  utility_io.c
Releases/: altair_pico.uf2  altair_pico2.uf2  altair_pico2_display28.uf2  altair_pico2_w.uf2  altair_pico2_w_display28.uf2  altair_pico2_w_display28_rfs.uf2  altair_pico2_w_inky.uf2  altair_pico2_w_inky_rfs.uf2  altair_pico2_w_remotefs_2_8.uf2  altair_pico2_w_remotefs_waveshare2.uf2  altair_pico2_w_rfs.uf2  altair_pico2_w_sd.uf2  altair_pico2_w_vt100_sd_bt.uf2  altair_pico2_w_waveshare2_rfs.uf2  altair_pico2_w_waveshare35_sd.uf2  altair_pico_display28.uf2  altair_pico_w.uf2  altair_pico_w_inky.uf2  altair_pico_w_inky_rfs.uf2  altair_pico_w_rfs.uf2  altair_pimoroni_pico_plus2_w_rp2350.uf2  altair_pimoroni_pico_plus2_w_rp2350_display28.uf2  altair_pimoroni_pico_plus2_w_rp2350_display28_rfs.uf2  altair_pimoroni_pico_plus2_w_rp2350_sd.uf2  altair_pimoroni_pico_plus2_w_rp2350_waveshare2_rfs.uf2
RemoteFS/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  remote_fs_server.py  remote_ft_server.py  requirements.txt
Terminal/: README.md  index.html  update_static_html.sh
captive_portal/: captive_portal.c  captive_portal.h  config_page.html  config_page_hex.h  generate_config_page.py
deploy/: altair_pico.uf2  altair_pico2.uf2  altair_pico2_w.uf2  altair_pico_w.uf2  altair_pimoroni_pico_plus2_w_rp2350.uf2
disks/: bdsc_v1_60_disk.h
drivers/bluetooth/: bt_keyboard.c  bt_keyboard.h  btstack_config.h
drivers/sdcard/: sdcard.c
drivers/waveshare/: ws_display.c  ws_display.h  ws_fatfs.c  ws_fatfs.h  ws_ili9488.c  ws_ili9488.h  ws_sdcard.c  ws_spi1_bus.c  ws_spi1_bus.h
local_altair/: CMakeLists.txt  README.md  build_version.h  host_platform.c  host_platform.h  io_ports.c  main.c  start-local-altair-windows.cmd  wifi.h
local_altair/pico/: rand.h  stdlib.h  time.h  unique_id.h
mcp_app_build_server/: .gitignore  CMakeLists.txt  README.md  host_files.c  host_files.h  mcp_server.c  run-altair-cpm-mcp.sh
mcp_app_build_server/disks/: bdsc-v1.60.dsk  blank.dsk  cpm63k.dsk
scripts/: build-host-tools-windows.cmd  build-mcp-app-build-server.sh  start-local-altair-windows.cmd
src/pico/: build_all_boards.sh  build_version.h.in  core1_io_mgr.c  cpu_state.c  cpu_state.h  generate_version.cmake  i8080_disasm.c  i8080_disasm.h  io_ports.c  io_ports.h  simple_build_test.sh
src/pico/Altair8800/: pico_88dcdd_flash.c  pico_88dcdd_flash.h  pico_88dcdd_remote_fs.h  pico_88dcdd_sd_card.c  pico_88dcdd_sd_card.h  remote_fs.c  remote_fs.h
src/pico/FrontPanels/: display_st7789.h  ili9488_async.h  inky_display.cpp  inky_display.h  st7789_async.h  virtual_monitor.c  virtual_monitor.h  vt100_display.c  vt100_display.h
src/pico/Releases/: altair_pico2.uf2  altair_pico2_w_display28_rfs.uf2  altair_pico2_w_rfs.uf2  altair_pico2_w_sd.uf2  altair_pico2_w_vt100_sd_bt.uf2  altair_pico2_w_waveshare2_rfs.uf2  altair_pico_w_rfs.uf2  altair_pimoroni_pico_plus2_w_rp2350.uf2  altair_pimoroni_pico_plus2_w_rp2350_sd.uf2  altair_pimoroni_pico_plus2_w_rp2350_waveshare2_rfs.uf2
src/pico/captive_portal/: captive_portal.c  config_page.html
src/pico/drivers/bluetooth/: bt_keyboard.c  btstack_config.h
src/pico/drivers/waveshare/: ws_ili9488.h
src/pico/test/remote_fs/: main.c
test/ft_client/: Makefile  README.md  ft_test_client  ft_test_client.c
test/remote_fs/: CMakeLists.txt
workspaces/: pico.code-workspace
